Omskrevet til bruk av ny topic "OpplysningerOmArbeidssoeker"
